--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "website/base.html" %}
 {% load static %}
 
 {% block content %}
 
     <body id="page-top">
         <!-- Masthead-->
-        <header class="masthead">
+        <header class="masthead" style="background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url('static/website/images/img/bg-masthead.jpg') no-repeat scroll center;">
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
@@ -26,12 +26,12 @@
                 <hr class="divider" />
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <img src="static/assets/img/colette-tatou-full.png" alt="portrait_colette" width="auto" height="300">
+                        <img src="{% static 'website/images/img/colette-tatou-full.png'%}"  alt="portrait_colette" width="auto" height="300">
                         <h3 class="h4 mb-2">Colette</h3>
                         <p class="text-muted mb-0">Placeholder Text</p>
                     </div>
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <img src="static/assets/img/ratatouille-portrait.jpg" alt="portrait_remy" width="400" height="300">
+                        <img src="{% static 'website/images/img/ratatouille-portrait.jpg'%}" alt="portrait_remy" width="400" height="300">
                         <h3 class="h4 mb-2">Remy</h3>
                         <p class="text-muted mb-0">Placeholder Text</p>
                     </div>
