Add user creation form + correct implementation of sticky nav bar
Sticky nav bar was getting in the way of other elements; a clone has been implemented with jQuery and CSS transform to make room and follow scroll

--- a/website/static/website/styles.css
+++ b/website/static/website/styles.css
@@ -3923,6 +3923,20 @@ textarea.form-control-lg {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  position: relative;
+  width: 100%;
+}
+nav.clone {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateY(-100%);
+    transition: 0.2s transform cubic-bezier(.3,.73,.3,.74);
+}
+
+body.down nav.clone {
+    transform: translateY(0);
 }
 
 .nav-link {
@@ -11308,7 +11322,10 @@ hr.divider-light {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background-color: #fff;
   transition: background-color 0.2s ease;
+  position: relative;
+  width: 100%;
 }
+
 #mainNav .navbar-brand {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
