--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -68,13 +68,22 @@
     {% endblock %}
 
     <!-- Footer-->
-    <footer class="py-5"  style="background-color: rgba(232, 167, 93, 0.8);">
-        <div class="d-flex justify-content-around px-4 px-lg-5">
-            <div class="nav-item"><a class="nav-link" href="#legal">Mentions Légales</a></div>
-            <div class="nav-item small text-muted">Copyright &copy; 2021 - Dimitri Ravot</div>
-            <div class="nav-item"><a class="nav-link" href="#contact">Contact</a></div>
+    <footer class="footer mt-auto py-3"  style="background-color: rgba(232, 167, 93, 0.8);">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-lg-4 col-xl-4 text-center">
+                    <a class="nav-link" href="#legal">Mentions Légales</a>
+                </div>
+                <div class="col-lg-4 col-xl-4 text-center">
+                    <a class="nav-link small text-muted" href="#github">Copyright Dimitri Ravot</a>
+                </div>
+                <div class="col-lg-4 col-xl-4 text-center">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </div>
+            </div>
         </div>
     </footer>
+
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
