--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -7,64 +7,73 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+
+        {% if title %}
+            <title>Pur Beurre - {{ title }}</title>
+        {% else %}
+            <title>Pur Beurre</title>
+        {% endif %}
+
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'website/images/img/logo_pur_beurre-favicon.png' %}" />
-        <!-- Bootstrap Icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-        <!-- SimpleLightbox plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+
         <link href="{% static 'website/styles.css' %}" rel="stylesheet" />
     </head>
 
     <!-- Navigation-->
+    <body class="d-flex flex-column min-vh-100">
 
-    <nav class="navbar navbar-light navbar-expand-lg py-3" style="background-color: rgba(196, 85, 37, 0.7);">
-        <div class="container align-items-center px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Pur Beurre</a>
-            <button class="navbar-toggler text-white navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav mr-auto ms-auto my-2 my-lg-0">
-                    <li class="nav-item">
-                        <form class="form-inline">
-                          <input class="form-control" type="search" placeholder="Rechercher" aria-label="Search" style="background-color: rgba(21,17,18,0.33)">
-                        </form>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#account" target="_blank" rel="noopener" aria-label="Account">
-                            <svg xmlns="http://www.w3.org/2000/svg" width=1em fill="currentColor" class="navbar-nav-svg" viewBox="0 0 16 16" font-size="xx-large">
-                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"></path>
-                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"></path>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#favourites" target="_blank" rel="noopener" aria-label="Favourites">
-                            <svg class="navbar-nav-svg" xmlns="http://www.w3.org/2000/svg" width=1em fill="currentColor" viewBox="0 0 100 125" font-size="xx-large">
-                                <path fill-rule="evenodd" d="M67.884,19.301c-0.094-0.949-0.845-1.699-1.793-1.793c-2.916-0.291-5.802,0.431-8.213,1.992  c0.002-0.119,0.017-0.237,0.017-0.357c0-5.25-2.332-10.172-6.397-13.504c-0.736-0.604-1.799-0.604-2.535,0  c-4.066,3.333-6.398,8.255-6.398,13.504c0,0.233,0.024,0.463,0.033,0.695c-2.502-1.787-5.573-2.64-8.687-2.329  c-0.948,0.094-1.699,0.845-1.793,1.793c-0.38,3.835,0.963,7.595,3.684,10.315c1.324,1.324,2.893,2.309,4.599,2.94  c-2.816,2.596-4.593,6.302-4.593,10.424c0,4.189,2.263,17.697,4.745,31.458c-0.001,0.025-0.007,0.048-0.007,0.073  c0,0.28,0.059,0.547,0.163,0.789c0.569,3.145,1.146,6.293,1.709,9.337c0.309,1.674,0.539,2.917,0.653,3.564  c0.98,5.531,3.284,6.613,6.932,6.613c3.736,0,6.069-1.089,6.938-6.653c0.166-1.062,0.68-3.874,1.328-7.434  c2.869-15.724,5.929-32.905,5.929-37.748c0-4.122-1.777-7.828-4.593-10.424c1.706-0.632,3.274-1.616,4.599-2.94  C66.921,26.897,68.264,23.137,67.884,19.301z M50.229,9.913c2.347,2.485,3.665,5.765,3.665,9.229c0,3.436-1.297,6.708-3.65,9.211  c-0.005,0.005-0.01,0.011-0.015,0.016c-2.364-2.506-3.666-5.781-3.666-9.227C46.563,15.678,47.882,12.398,50.229,9.913z   M36.101,21.492c2.001,0.207,3.855,1.086,5.296,2.527c1.441,1.442,2.32,3.308,2.528,5.296c-2.002-0.208-3.855-1.086-5.297-2.528  C37.187,25.347,36.309,23.481,36.101,21.492z M60.194,42.981c0,4.886-3.814,25.796-5.863,37.03c-0.68,3.728-1.172,6.421-1.345,7.534  C52.476,90.815,52,90.815,50,90.815c-1.991,0-2.405,0-2.992-3.311c-0.116-0.654-0.348-1.907-0.66-3.594  c-0.356-1.925-0.83-4.491-1.359-7.399h4.899c1.104,0,2-0.896,2-2s-0.896-2-2-2h-5.622c-0.296-1.65-0.6-3.36-0.904-5.092h6.526  c1.104,0,2-0.896,2-2s-0.896-2-2-2h-7.221c-0.309-1.8-0.608-3.586-0.892-5.318h8.113c1.104,0,2-0.896,2-2s-0.896-2-2-2h-8.751  c-0.787-5.077-1.33-9.251-1.33-11.121c0-5.621,4.573-10.194,10.194-10.194S60.194,37.359,60.194,42.981z M61.372,26.788  c-1.441,1.441-3.295,2.32-5.297,2.527c0.208-1.988,1.087-3.854,2.528-5.296c1.44-1.441,3.295-2.32,5.296-2.527  C63.691,23.481,62.813,25.347,61.372,26.788z"></path>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#logout" target="_blank" rel="noopener" aria-label="Logout">
-                            <svg xmlns="http://www.w3.org/2000/svg" width=1em fill="currentColor" class="navbar-nav-svg" viewBox="0 0 16 16" font-size="xx-large">
-                                <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"></path>
-                                <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"></path>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light mb-5" style="z-index: 1; background-color: rgba(196, 85, 37, 0.9);">
+        <a class="navbar-brand" href="#">Pur Beurre</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <form class="form-inline">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                </form>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}" target="_self" rel="noopener" aria-label="Account">
+                        <svg xmlns="http://www.w3.org/2000/svg" width=1em fill="currentColor" class="navbar-nav-svg" viewBox="0 0 16 16" font-size="xx-large">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"></path>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"></path>
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}" target="_self" rel="noopener" aria-label="Favourites">
+                        <svg class="navbar-nav-svg" xmlns="http://www.w3.org/2000/svg" width=1em fill="currentColor" viewBox="-12 0 38 38" font-size="xx-large">
+                            <path fill-rule="evenodd" d="M 14.3536 5.7204 c -0.0376 -0.3796 -0.338 -0.6796 -0.7172 -0.7172 c -1.1664 -0.1164 -2.3208 0.1724 -3.2852 0.7968 c 0.0008 -0.0476 0.0068 -0.0948 0.0068 -0.1428 c 0 -2.1 -0.9328 -4.0688 -2.5588 -5.4016 c -0.2944 -0.2416 -0.7196 -0.2416 -1.014 0 c -1.6264 1.3332 -2.5592 3.302 -2.5592 5.4016 c 0 0.0932 0.0096 0.1852 0.0132 0.278 c -1.0008 -0.7148 -2.2292 -1.056 -3.4748 -0.9316 c -0.3792 0.0376 -0.6796 0.338 -0.7172 0.7172 c -0.152 1.534 0.3852 3.038 1.4736 4.126 c 0.5296 0.5296 1.1572 0.9236 1.8396 1.176 c -1.1264 1.0384 -1.8372 2.5208 -1.8372 4.1696 c 0 1.6756 0.9052 7.0788 1.898 12.5832 c -0.0004 0.01 -0.0028 0.0192 -0.0028 0.0292 c 0 0.112 0.0236 0.2188 0.0652 0.3156 c 0.2276 1.258 0.4584 2.5172 0.6836 3.7348 c 0.1236 0.6696 0.2156 1.1668 0.2612 1.4256 c 0.392 2.2124 1.3136 2.6452 2.7728 2.6452 c 1.4944 0 2.4276 -0.4356 2.7752 -2.6612 c 0.0664 -0.4248 0.272 -1.5496 0.5312 -2.9736 c 1.1476 -6.2896 2.3716 -13.162 2.3716 -15.0992 c 0 -1.6488 -0.7108 -3.1312 -1.8372 -4.1696 c 0.6824 -0.2528 1.3096 -0.6464 1.8396 -1.176 C 13.9684 8.7588 14.5056 7.2548 14.3536 5.7204 z M 7.2916 1.9652 c 0.9388 0.994 1.466 2.306 1.466 3.6916 c 0 1.3744 -0.5188 2.6832 -1.46 3.6844 c -0.002 0.002 -0.004 0.0044 -0.006 0.0064 c -0.9456 -1.0024 -1.4664 -2.3124 -1.4664 -3.6908 C 5.8252 4.2712 6.3528 2.9592 7.2916 1.9652 z M 1.6404 6.5968 c 0.8004 0.0828 1.542 0.4344 2.1184 1.0108 c 0.5764 0.5768 0.928 1.3232 1.0112 2.1184 c -0.8008 -0.0832 -1.542 -0.4344 -2.1188 -1.0112 C 2.0748 8.1388 1.7236 7.3924 1.6404 6.5968 z M 11.2776 15.1924 c 0 1.9544 -1.5256 10.3184 -2.3452 14.812 c -0.272 1.4912 -0.4688 2.5684 -0.538 3.0136 C 8.1904 34.326 8 34.326 7.2 34.326 c -0.7964 0 -0.962 0 -1.1968 -1.3244 c -0.0464 -0.2616 -0.1392 -0.7628 -0.264 -1.4376 c -0.1424 -0.77 -0.332 -1.7964 -0.5436 -2.9596 h 1.9596 c 0.4416 0 0.8 -0.3584 0.8 -0.8 s -0.3584 -0.8 -0.8 -0.8 h -2.2488 c -0.1184 -0.66 -0.24 -1.344 -0.3616 -2.0368 h 2.6104 c 0.4416 0 0.8 -0.3584 0.8 -0.8 s -0.3584 -0.8 -0.8 -0.8 h -2.8884 c -0.1236 -0.72 -0.2432 -1.4344 -0.3568 -2.1272 h 3.2452 c 0.4416 0 0.8 -0.3584 0.8 -0.8 s -0.3584 -0.8 -0.8 -0.8 h -3.5004 c -0.3148 -2.0308 -0.532 -3.7004 -0.532 -4.4484 c 0 -2.2484 1.8292 -4.0776 4.0776 -4.0776 S 11.2776 12.9436 11.2776 15.1924 z M 11.7488 8.7152 c -0.5764 0.5764 -1.318 0.928 -2.1188 1.0108 c 0.0832 -0.7952 0.4348 -1.5416 1.0112 -2.1184 c 0.576 -0.5764 1.318 -0.928 2.1184 -1.0108 C 12.6764 7.3924 12.3252 8.1388 11.7488 8.7152 z"></path>
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}" target="self" rel="noopener" aria-label="Logout">
+                        <svg xmlns="http://www.w3.org/2000/svg" width=1em fill="currentColor" class="navbar-nav-svg" viewBox="0 0 16 16" font-size="xx-large">
+                            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"></path>
+                            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"></path>
+                        </svg>
+                    </a>
+                </li>
+                {% else %}
+                {% endif %}
+            </ul>
         </div>
     </nav>
 
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 
     {% block content %}
+
     {% endblock %}
 
     <!-- Footer-->
@@ -84,17 +93,13 @@
         </div>
     </footer>
 
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- SimpleLightbox plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-    <!-- Core theme JS-->
+    </body>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <script src="{% static 'website/scripts.js' %}"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
 </html>
+
+
