--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -14,7 +14,8 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <h2 class="text-white-75 mb-5">Trouvez un produit de substitution pour ceux que vous utilisez tous les jours.</h2>
-                        <a class="btn btn-primary btn-xl" href="#about">Rechercher</a>
+                                            {% include 'website/search_form.html' %}
+
                     </div>
                 </div>
             </div>
