--- a/website/templates/website/products.html
+++ b/website/templates/website/products.html
@@ -2,25 +2,47 @@
 {% load static %}
 {% block content %}
 
-    <br><br>
-    <div class="row">
+
+    <div class="row mb-auto mt-auto mr-5 ml-5">
       {% for product in products %}
-        <div class="col-md-4 col-sm-6 col-lg-3">
+        <div class="col-md-6 col-sm-12 col-lg-4">
           <div class="card">
-            <img class="card-img-top" src="{{ product.picture }}" alt="Card image cap">
+
+            <img class="card-img-top rounded mx-auto d-block" src="{{ product.picture }}" alt="Card image cap" style="display: block;height: 15rem;max-width: 100%;width: auto;">
             <div class="card-body text-center">
               <p class="card-title">{{ product.name }}</p>
               <hr>
-              <a href="/product/{{product.id}}"
-              ><input
-                type="submit"
-                value="Learn More"
-                class="btn btn-danger btn-sm"
-            /></a>
+                <p class="card-text">{{ product.generic_name }}</p>
+              <a href="/product/{{product.id}}">
+                  <input type="submit" value="Learn More" class="btn btn-danger btn-sm"/>
+              </a>
             </div>
           </div>
           <br><br><br>
         </div>
       {% endfor %}
     </div>
+
+    {% if is_paginated %}
+
+      {% if page_obj.has_previous %}
+        <a class="btn btn-outline-info mb-4" href="?page=1&query={{ query }}">First</a>
+        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}&query={{ query }}">Previous</a>
+      {% endif %}
+
+      {% for num in page_obj.paginator.page_range %}
+        {% if page_obj.number == num %}
+          <a class="btn btn-info mb-4" href="?page={{ num }}&query={{ query }}">{{ num }}</a>
+        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+          <a class="btn btn-outline-info mb-4" href="?page={{ num }}&query={{ query }}">{{ num }}</a>
+        {% endif %}
+      {% endfor %}
+
+      {% if page_obj.has_next %}
+        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}&query={{ query }}">Next</a>
+        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}&query={{ query }}">Last</a>
+      {% endif %}
+
+    {% endif %}
 {% endblock %}
+
